examples/invalid/ns/memory/hello_task_glm_nested_result_struct_payload_invalid.ns
mod cpu Main {
  struct ResultPacket {
    result: TaskResult<i64>
  }

  async fn consume(packet: ResultPacket) -> i64 {
    return 7;
  }

  fn main() -> i64 {
    return 1;
  }
}
